web/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knutt-vs-muschel
  labels:
    app.kubernetes.io/name: knutt-vs-muschel
